# xds-deploy

./: deploy.cabal  install.sh
src/: Main.hs
